Start integrate Francesco's comment

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -259,7 +259,7 @@
    "outputs": [],
    "source": [
     "bbs_widgets['articles_button'] = ipywidgets.Button(\n",
-    "    description='Extract Entities & Properties for chosen articles!',\n",
+    "    description='Mine Selected Articles!',\n",
     "    layout=ipywidgets.Layout(width='60%')\n",
     ")\n",
     "\n",
@@ -291,7 +291,7 @@
     "\n",
     "# \"Submit!\" Button\n",
     "bbs_widgets['submit_button'] = ipywidgets.Button(\n",
-    "    description='Extract Entities & Properties!',\n",
+    "    description='Mine This Text!',\n",
     "    layout=ipywidgets.Layout(width='30%')\n",
     ")\n",
     "def cb(b):\n",
