Integrate Francesco's comments.

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -271,7 +271,9 @@
     "        article_saver.retrieve_text()\n",
     "        table_extractions = pd.DataFrame()\n",
     "        for article_infos, text in article_saver.articles_text.items():\n",
-    "            table_extractions = table_extractions.append(text_mining_pipeline(text, article_id=article_infos[0], return_prob=False))\n",
+    "            table_extractions = table_extractions.append(text_mining_pipeline(text, \n",
+    "                                                                              article_id=article_infos[0], \n",
+    "                                                                              return_prob=True))\n",
     "        display(table_extractions)\n",
     "        \n",
     "bbs_widgets['articles_button'].on_click(article_button)"
