[BBS-66]: Link between Search Engine and Text Mining Tool (#40)
* [BBS-66]: Link between Search Engine and Text Mining Tool

* Add the cleaning part of the article saver

Add a cleaning function to the article saver +
Create test for the ArticleSaver class

* Remove debugger prints

* Modify BBS_BBG_POC notebook to work on DGX1

* Change assets path to work on DGX1

* Small changes for DGX1

* Change line in entity linking

* Remove useless print

* Change the status of article_saver

* Add the possibility to specify article_id in pipeline

It is now possible to add an article_id in the pipeline
to fill the paper_id column

* Complete the docstring of the TextMiningPipeline

* Complete docstring of widget.py

* Integrate Stan's comments

* Change value of table in summary_table

* Add pdfkit in setup.py

* Change summary_table

* Add cell in BBS_BBG_POC to display status of ArticleSaver

* Add the output with the path to the report

* Change the 'wkhtmltopdf' in Dockerfile

There was an issue about generating PDFs.
This should be solved with this new way of
installing wkhtmltopdf

* Change the saving_options list in widget.py

* Put saving_options as OrderedDict

* Add comments + nltk downloads in POC notebook

* Correct change of the saved_articles status

* Start integrate Francesco's comment

* Integrate Francesco's comments.

* Change button of search widget size

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -42,7 +42,8 @@
     "\n",
     "import bbsearch.embedding_models as embedding_models\n",
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
-    "from bbsearch.widget import Widget"
+    "from bbsearch.widget import Widget\n",
+    "from bbsearch.article_saver import ArticleSaver"
    ]
   },
   {
@@ -104,6 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "\n",
     "models_to_load = [\"SBioBERT\",\"BSV\"]\n",
     "embeddings_models = dict()\n",
     "precomputed_embeddings = dict()\n",
@@ -115,7 +119,7 @@
     "        \n",
     "    precomputed_embeddings[model] = np.load(embeddings_path / model / f'{model}.npy').astype('float32')  \n",
     "    # astype('float32') speeds up the search\n",
-    "database = sqlite3.connect('/raid/covid_data/data/v7/cord19_v1.db')"
+    "database = sqlite3.connect(data_path / 'cord19_v1.db')"
    ]
   },
   {
@@ -124,8 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(embeddings_models, precomputed_embeddings, database)\n",
-    "bbs_widget.display()"
+    "article_saver = ArticleSaver(database=database)"
    ]
   },
   {
@@ -133,7 +136,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bbs_widget = Widget(embeddings_models, precomputed_embeddings, database, article_saver=article_saver)\n",
+    "bbs_widget.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Status of the Article Saver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = article_saver.summary_table()\n",
+    "display(table)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,8 +225,7 @@
     "ee_model = spacy.load(\"en_ner_craft_md\")\n",
     "\n",
     "# Relations Extractors (RE)\n",
-    "PATH_ASSETS = Path('/raid/covid_data/assets')\n",
-    "PATH_CHEMPROT_TRAINED_MODEL = PATH_ASSETS / 'scibert_chemprot.tar.gz'\n",
+    "PATH_CHEMPROT_TRAINED_MODEL = assets_path / 'scibert_chemprot.tar.gz'\n",
     "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
     "\n",
     "# Full Pipeline\n",
@@ -227,8 +249,42 @@
    "outputs": [],
    "source": [
     "# Define Widgets\n",
-    "bbs_widgets = OrderedDict()\n",
+    "bbs_widgets = OrderedDict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbs_widgets['articles_button'] = ipywidgets.Button(\n",
+    "    description='Mine Selected Articles!',\n",
+    "    layout=ipywidgets.Layout(width='60%')\n",
+    ")\n",
     "\n",
+    "def article_button(b):\n",
+    "    global table_extractions\n",
+    "    bbs_widgets['out'].clear_output()\n",
+    "    complete_text = ''\n",
+    "    with bbs_widgets['out']:\n",
+    "        article_saver.retrieve_text()\n",
+    "        table_extractions = pd.DataFrame()\n",
+    "        for article_infos, text in article_saver.articles_text.items():\n",
+    "            table_extractions = table_extractions.append(text_mining_pipeline(text, \n",
+    "                                                                              article_id=article_infos[0], \n",
+    "                                                                              return_prob=True))\n",
+    "        display(table_extractions)\n",
+    "        \n",
+    "bbs_widgets['articles_button'].on_click(article_button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# \"Input Text\" Widget\n",
     "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
     "        value=DEFAULT_TEXT,\n",
@@ -237,7 +293,7 @@
     "\n",
     "# \"Submit!\" Button\n",
     "bbs_widgets['submit_button'] = ipywidgets.Button(\n",
-    "    description='Extract Entities & Properties!',\n",
+    "    description='Mine This Text!',\n",
     "    layout=ipywidgets.Layout(width='30%')\n",
     ")\n",
     "def cb(b):\n",
@@ -563,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
