Fix path to str for python 3.6

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "db_path = databases_path / 'cord19.db'\n",
     "assert db_path.is_file()\n",
-    "database = sqlite3.connect(db_path)"
+    "database = sqlite3.connect(str(db_path))"
    ]
   },
   {
