--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -4,19 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODOs**\n",
-    "- [ ] The trained SciBERT model `scibert_chemprot.tar.gz` stores inside itself \n",
-    "  absolute paths to vocabulary text and weights! So it cannot be move around\n",
-    "  without rewriting its metadata inside.\n",
-    "- [ ] SciBERT can not be obtained with `pip install`, so currently one needs to \n",
-    "    1. `git clone https://github.com/allenai/scibert.git`\n",
-    "    2. `export PYTHONPATH=$PYTHONPATH:PATH_TO_SCIBERT`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Goal of the notebook\n",
     "(to be completed)"
    ]
@@ -92,11 +79,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_VERSION = 'v7'\n",
+    "BBS_DATA_PATH = Path('/raid/bbs_data/')\n",
+    "CORD19_VERSION = 'v7'\n",
     "\n",
-    "data_path = Path(\"/raid/covid_data/data/\") / DATASET_VERSION\n",
-    "assets_path = Path(\"/raid/covid_data/assets\")\n",
-    "embeddings_path = data_path / \"embeddings\""
+    "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
+    "databases_path = cord_path / 'databases'\n",
+    "embeddings_path = cord_path / 'embeddings'\n",
+    "trained_models_path = BBS_DATA_PATH / 'trained_models'"
    ]
   },
   {
@@ -113,13 +102,16 @@
     "precomputed_embeddings = dict()\n",
     "for model in models_to_load:\n",
     "    if model == 'BSV':\n",
-    "        embeddings_models[model] = embedding_models.BSV(checkpoint_model_path=assets_path / 'BioSentVec_PubMed_MIMICIII-bigram_d700.bin')\n",
+    "        embeddings_models[model] = embedding_models.BSV(checkpoint_model_path=trained_models_path / 'BioSentVec_PubMed_MIMICIII-bigram_d700.bin')\n",
     "    else:\n",
     "        embeddings_models[model] = getattr(embedding_models, model)()\n",
     "        \n",
-    "    precomputed_embeddings[model] = np.load(embeddings_path / model / f'{model}.npy').astype('float32')  \n",
+    "    precomputed_embeddings[model] = np.load(embeddings_path / f'{model}.npy').astype('float32')  \n",
     "    # astype('float32') speeds up the search\n",
-    "database = sqlite3.connect(data_path / 'cord19_v1.db')"
+    "\n",
+    "db_path = databases_path / 'cord19.db'\n",
+    "assert db_path.is_file()\n",
+    "database = sqlite3.connect(str(db_path))"
    ]
   },
   {
@@ -225,7 +217,7 @@
     "ee_model = spacy.load(\"en_ner_craft_md\")\n",
     "\n",
     "# Relations Extractors (RE)\n",
-    "PATH_CHEMPROT_TRAINED_MODEL = assets_path / 'scibert_chemprot.tar.gz'\n",
+    "PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
     "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
     "\n",
     "# Full Pipeline\n",
