Allow reading bbs data path from env

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "from collections import OrderedDict\n",
     "import logging\n",
+    "import os\n",
     "from pathlib import Path\n",
     "import sqlite3\n",
     "\n",
@@ -27,10 +28,10 @@
     "import spacy\n",
     "import nltk\n",
     "\n",
+    "from bbsearch.article_saver import ArticleSaver\n",
     "import bbsearch.embedding_models as embedding_models\n",
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
-    "from bbsearch.widget import Widget\n",
-    "from bbsearch.article_saver import ArticleSaver"
+    "from bbsearch.widget import Widget"
    ]
   },
   {
@@ -79,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BBS_DATA_PATH = Path('/raid/bbs_data/')\n",
+    "BBS_DATA_PATH = Path(os.getenv(\"BBS_DATA_PATH\")) if \"BBS_DATA_PATH\" in os.environ else Path('/raid/bbs_data/')\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
     "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
