Re-index output for multi-article mining

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -266,9 +266,9 @@
     "        for article_id, section_name, paragraph_id, text \\\n",
     "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
     "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
-    "            table_extractions = table_extractions.append(text_mining_pipeline(text, \n",
-    "                                                                              article_id=text_identifier, \n",
-    "                                                                              return_prob=True))\n",
+    "            table_extractions = table_extractions.append(\n",
+    "                text_mining_pipeline(text, article_id=text_identifier, return_prob=True), \n",
+    "                ignore_index=True)\n",
     "        display(table_extractions)\n",
     "        \n",
     "bbs_widgets['articles_button'].on_click(article_button)"
