--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -31,6 +31,7 @@
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
+    "from bbsearch.remote_searcher import RemoteSearcher\n",
     "from bbsearch.widget import Widget"
    ]
   },
@@ -80,17 +81,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['SEARCH_ENGINE_URL'] = \"http://dgx1.bbp.epfl.ch:8850\"\n",
     "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
     "BBS_DATA_PATH = Path(os.getenv(\"BBS_DATA_PATH\")) if \"BBS_DATA_PATH\" in os.environ else Path('/raid/bbs_data/')\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
     "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
     "db_path = cord_path / 'databases' / 'cord19.db'\n",
-    "embeddings_path = cord_path / 'embeddings'\n",
     "trained_models_path = BBS_DATA_PATH / 'trained_models'\n",
     "\n",
-    "assert db_path.is_file()"
+    "assert db_path.is_file()\n",
+    "assert SEARCH_ENGINE_URL is not None"
    ]
   },
   {
@@ -99,35 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if SEARCH_ENGINE_URL is not None:\n",
-    "    response = requests.post(\"{}/hello\".format(SEARCH_ENGINE_URL))\n",
-    "    assert response.ok and response.json(), \"The server is not accessible\"\n",
+    "response = requests.post(\"{}/hello\".format(SEARCH_ENGINE_URL))\n",
+    "assert response.ok and response.json(), \"The server is not accessible\"\n",
     "\n",
-    "    print('Using remote search')\n",
-    "    from bbsearch.remote_searcher import RemoteSearcher\n",
-    "    \n",
-    "    searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "else:\n",
-    "    print('Using local search')\n",
-    "    import bbsearch.embedding_models as embedding_models\n",
-    "    from bbsearch.search import LocalSearcher\n",
-    "    \n",
-    "    nltk.download('stopwords')\n",
-    "    nltk.download('punkt')\n",
-    "    \n",
-    "    models_to_load = [\"SBioBERT\",\"BSV\"]\n",
-    "    loaded_models = dict()\n",
-    "    precomputed_embeddings = dict()\n",
-    "    for model in models_to_load:\n",
-    "        if model == 'BSV':\n",
-    "            loaded_models[model] = embedding_models.BSV(checkpoint_model_path=trained_models_path / 'BioSentVec_PubMed_MIMICIII-bigram_d700.bin')\n",
-    "        else:\n",
-    "            loaded_models[model] = getattr(embedding_models, model)()\n",
-    "        \n",
-    "        precomputed_embeddings[model] = np.load(embeddings_path / f'{model}.npy').astype('float32')  \n",
-    "    \n",
-    "    searcher = LocalSearcher(loaded_models, precomputed_embeddings, db_path)\n",
-    "    \n",
+    "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
+    "\n",
     "database = sqlite3.connect(str(db_path))"
    ]
   },
