[BBS-83] Do BBS search as a service instead of notebook (#49)
* Add search server stub

* Implement Searcher and LocalSearcher

* Add logging to LocalSearcher

* Change widget class to use the Searcher

* Restructure entrypoints to import in main()

* Add search server entrypoint

* Add RemoteSearcher

* Finish SearchServer

* Add search server Dockerfile

* Install Cython and numpy explicitely in Dockerfile

* Add sent2vec-prebuilt to requirements.txt

* Replace python setup.py install by pip install .

* Fix bugs

* Fix typo in dockerfile

* Fix more server bugs

* Connect to DB at every query

* Convert numpy arrays to lists in server response

* Improve search server query response

* Fix search server response

* Try to fix weird Flask bug

* Put all entrypoints into a module

* Change absolute imports in entrypoints to relative

* Remove abstract Searcher class and add docstrings.

* Add minimal testing for entrypoints

* Load models and embedding outside of LocalSearcher

* Make search server load models and embeddings

* Add __init__.py to entrypoints module

* Use pathlib in search server

* Move LocalSearcher to search.py

There was no benefit in keeping it in a separate module.
The old module `local_searcher.py` imported from
`search.py` anyway.

* Test LocalSearcher

* Test RemoteSearcher

* Use precise database path instead of a folder

* Add hello route to server

* Adjust the POC notebook

* Fix docstrings

* Remove local search option

Co-authored-by: Jan Krepl <jankrepl@yahoo.com>

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -24,13 +24,14 @@
     "import ipywidgets\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import requests\n",
     "import scispacy\n",
     "import spacy\n",
     "import nltk\n",
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
-    "import bbsearch.embedding_models as embedding_models\n",
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
+    "from bbsearch.remote_searcher import RemoteSearcher\n",
     "from bbsearch.widget import Widget"
    ]
   },
@@ -80,13 +81,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
     "BBS_DATA_PATH = Path(os.getenv(\"BBS_DATA_PATH\")) if \"BBS_DATA_PATH\" in os.environ else Path('/raid/bbs_data/')\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
     "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
-    "databases_path = cord_path / 'databases'\n",
-    "embeddings_path = cord_path / 'embeddings'\n",
-    "trained_models_path = BBS_DATA_PATH / 'trained_models'"
+    "db_path = cord_path / 'databases' / 'cord19.db'\n",
+    "trained_models_path = BBS_DATA_PATH / 'trained_models'\n",
+    "\n",
+    "assert db_path.is_file()\n",
+    "assert SEARCH_ENGINE_URL is not None"
    ]
   },
   {
@@ -95,23 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nltk.download('stopwords')\n",
-    "nltk.download('punkt')\n",
+    "response = requests.post(\"{}/hello\".format(SEARCH_ENGINE_URL))\n",
+    "assert response.ok and response.json(), \"The server is not accessible\"\n",
     "\n",
-    "models_to_load = [\"SBioBERT\",\"BSV\"]\n",
-    "embeddings_models = dict()\n",
-    "precomputed_embeddings = dict()\n",
-    "for model in models_to_load:\n",
-    "    if model == 'BSV':\n",
-    "        embeddings_models[model] = embedding_models.BSV(checkpoint_model_path=trained_models_path / 'BioSentVec_PubMed_MIMICIII-bigram_d700.bin')\n",
-    "    else:\n",
-    "        embeddings_models[model] = getattr(embedding_models, model)()\n",
-    "        \n",
-    "    precomputed_embeddings[model] = np.load(embeddings_path / f'{model}.npy').astype('float32')  \n",
-    "    # astype('float32') speeds up the search\n",
+    "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
-    "db_path = databases_path / 'cord19.db'\n",
-    "assert db_path.is_file()\n",
     "database = sqlite3.connect(str(db_path))"
    ]
   },
@@ -130,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(embeddings_models, precomputed_embeddings, database, article_saver=article_saver)\n",
+    "bbs_widget = Widget(searcher, database, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
