Change notebook to include mining_server

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -30,7 +30,6 @@
     "import nltk\n",
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
-    "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
     "from bbsearch.widget import Widget"
    ]
@@ -206,15 +205,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Entities Extractors (EE)\n",
-    "ee_model = spacy.load(\"en_ner_craft_md\")\n",
+    "def get_mining_pipeline(mining_server_url):\n",
+    "    \n",
+    "    mining_server = False\n",
+    "    \n",
+    "    if mining_server_url is not None:\n",
+    "        \n",
+    "        import io\n",
+    "        \n",
+    "        response = requests.post(mining_server_url + \"/help\")\n",
+    "        \n",
+    "        if response.ok and response.json()['name'] == 'MiningServer':\n",
+    "            mining_server = True\n",
+    "            \n",
+    "            def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
+    "                request_json = {\n",
+    "                    \"text\": text,\n",
+    "                    \"article_id\": article_id,\n",
+    "                    \"return_prob\": return_prob,\n",
+    "                    \"debug\": debug,\n",
+    "                }\n",
+    "                response = requests.post(mining_server_url, json=request_json)\n",
+    "                if response.headers[\"Content-Type\"] == \"text/csv\":\n",
+    "                    with io.StringIO(response.text) as f:\n",
+    "                        table_extractions = pd.read_csv(f)\n",
+    "                else:\n",
+    "                    print(\"Response content type is not text/csv.\")\n",
+    "                    \n",
+    "                return table_extractions\n",
+    "         \n",
+    "    if not mining_server:\n",
+    "        \n",
+    "        from bbsearch.mining import ChemProt, TextMiningPipeline\n",
+    "        \n",
+    "        # Entities Extractors (EE)\n",
+    "        ee_model = spacy.load(\"en_ner_craft_md\")\n",
     "\n",
-    "# Relations Extractors (RE)\n",
-    "PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
-    "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
+    "        # Relations Extractors (RE)\n",
+    "        PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
+    "        re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
     "\n",
-    "# Full Pipeline\n",
-    "text_mining_pipeline = TextMiningPipeline(ee_model, re_models)"
+    "        # Full Pipeline\n",
+    "        text_mining_pipeline = TextMiningPipeline(ee_model, re_models)\n",
+    "        \n",
+    "        def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
+    "            table_extractions = text_mining_pipeline(text, article_id, return_prob=return_prob, debug=debug)\n",
+    "            return table_extractions\n",
+    "        \n",
+    "    return textmining_pipeline\n",
+    "\n",
+    "mining_server_url = 'http://dgx1.bbp.epfl.ch:8852'\n",
+    "text_mining = get_mining_pipeline(mining_server_url)"
    ]
   },
   {
@@ -259,7 +300,7 @@
     "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
     "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
     "            table_extractions = table_extractions.append(\n",
-    "                text_mining_pipeline(text, article_id=text_identifier, return_prob=True), \n",
+    "                text_mining(text, article_id=text_identifier, return_prob=True), \n",
     "                ignore_index=True)\n",
     "        display(table_extractions)\n",
     "        \n",
@@ -288,7 +329,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = text_mining_pipeline(text, return_prob=True)\n",
+    "        table_extractions = text_mining(text, return_prob=True)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
