Add feedback concerning the option for mining pipeline

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -217,6 +217,7 @@
     "        \n",
     "        if response.ok and response.json()['name'] == 'MiningServer':\n",
     "            mining_server = True\n",
+    "            print('MiningServer')\n",
     "            \n",
     "            def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
     "                request_json = {\n",
@@ -235,6 +236,7 @@
     "                return table_extractions\n",
     "         \n",
     "    if not mining_server:\n",
+    "        print('Local Implementation')\n",
     "        \n",
     "        from bbsearch.mining import ChemProt, TextMiningPipeline\n",
     "        \n",
