Resolved flake8 error and change POC notebook with new help search server

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -98,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.post(\"{}/hello\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json(), \"The server is not accessible\"\n",
+    "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
+    "assert response.ok and response.json['name'] == 'SearchServer', \"The server is not accessible\"\n",
     "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
