Remove mining_server boolean

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -207,12 +207,9 @@
    "source": [
     "def get_mining_pipeline(mining_server_url):\n",
     "    \n",
-    "    mining_server = False\n",
-    "    \n",
     "    if mining_server_url is not None:\n",
     "        \n",
     "        import io\n",
-    "        \n",
     "        response = requests.post(mining_server_url + \"/help\")\n",
     "        \n",
     "        if response.ok and response.json()['name'] == 'MiningServer':\n",
@@ -234,25 +231,26 @@
     "                    print(\"Response content type is not text/csv.\")\n",
     "                    \n",
     "                return table_extractions\n",
+    "            \n",
+    "            return textmining_pipeline\n",
     "         \n",
-    "    if not mining_server:\n",
-    "        print('Local Implementation')\n",
-    "        \n",
-    "        from bbsearch.mining import ChemProt, TextMiningPipeline\n",
-    "        \n",
-    "        # Entities Extractors (EE)\n",
-    "        ee_model = spacy.load(\"en_ner_craft_md\")\n",
+    "    print('Local Implementation')\n",
     "\n",
-    "        # Relations Extractors (RE)\n",
-    "        PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
-    "        re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
+    "    from bbsearch.mining import ChemProt, TextMiningPipeline\n",
     "\n",
-    "        # Full Pipeline\n",
-    "        text_mining_pipeline = TextMiningPipeline(ee_model, re_models)\n",
-    "        \n",
-    "        def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
-    "            table_extractions = text_mining_pipeline(text, article_id, return_prob=return_prob, debug=debug)\n",
-    "            return table_extractions\n",
+    "    # Entities Extractors (EE)\n",
+    "    ee_model = spacy.load(\"en_ner_craft_md\")\n",
+    "\n",
+    "    # Relations Extractors (RE)\n",
+    "    PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
+    "    re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
+    "\n",
+    "    # Full Pipeline\n",
+    "    text_mining_pipeline = TextMiningPipeline(ee_model, re_models)\n",
+    "\n",
+    "    def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
+    "        table_extractions = text_mining_pipeline(text, article_id, return_prob=return_prob, debug=debug)\n",
+    "        return table_extractions\n",
     "        \n",
     "    return textmining_pipeline\n",
     "\n",
