Change return_prob to False and re_models = {}

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "    # Relations Extractors (RE)\n",
     "    PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
-    "    re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
+    "    re_models = {}\n",
     "\n",
     "    # Full Pipeline\n",
     "    text_mining_pipeline = TextMiningPipeline(ee_model, re_models)\n",
@@ -302,7 +302,7 @@
     "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
     "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
     "            table_extractions = table_extractions.append(\n",
-    "                text_mining(text, article_id=text_identifier, return_prob=True), \n",
+    "                text_mining(text, article_id=text_identifier, return_prob=False), \n",
     "                ignore_index=True)\n",
     "        display(table_extractions)\n",
     "        \n",
@@ -331,7 +331,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = text_mining(text, return_prob=True)\n",
+    "        table_extractions = text_mining(text, return_prob=False)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
@@ -681,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
