--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "from collections import OrderedDict\n",
     "import logging\n",
+    "import io\n",
     "import os\n",
     "from pathlib import Path\n",
     "import sqlite3\n",
@@ -207,57 +208,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_mining_pipeline(mining_server_url):\n",
-    "    \n",
-    "    if mining_server_url is not None:\n",
-    "        \n",
-    "        import io\n",
-    "        response = requests.post(mining_server_url + \"/help\")\n",
-    "        \n",
-    "        if response.ok and response.json()['name'] == 'MiningServer':\n",
-    "            mining_server = True\n",
-    "            print('MiningServer')\n",
-    "            \n",
-    "            def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
-    "                request_json = {\n",
-    "                    \"text\": text,\n",
-    "                    \"article_id\": article_id,\n",
-    "                    \"return_prob\": return_prob,\n",
-    "                    \"debug\": debug,\n",
-    "                }\n",
-    "                response = requests.post(mining_server_url, json=request_json)\n",
-    "                if response.headers[\"Content-Type\"] == \"text/csv\":\n",
-    "                    with io.StringIO(response.text) as f:\n",
-    "                        table_extractions = pd.read_csv(f)\n",
-    "                else:\n",
-    "                    print(\"Response content type is not text/csv.\")\n",
-    "                    \n",
-    "                return table_extractions\n",
-    "            \n",
-    "            return textmining_pipeline\n",
-    "         \n",
-    "    print('Local Implementation')\n",
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
+    "assert TEXT_MINING_URL is not None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
     "\n",
-    "    from bbsearch.mining import ChemProt, TextMiningPipeline\n",
+    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
     "\n",
-    "    # Entities Extractors (EE)\n",
-    "    ee_model = spacy.load(\"en_ner_craft_md\")\n",
+    "def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
+    "    request_json = {\n",
+    "        \"text\": text,\n",
+    "        \"article_id\": article_id,\n",
+    "        \"return_prob\": return_prob,\n",
+    "        \"debug\": debug,\n",
+    "    }\n",
+    "    response = requests.post(TEXT_MINING_URL, json=request_json)\n",
+    "    if response.headers[\"Content-Type\"] == \"text/csv\":\n",
+    "        with io.StringIO(response.text) as f:\n",
+    "            table_extractions = pd.read_csv(f)\n",
+    "    else:\n",
+    "        print(\"Response content type is not text/csv.\")\n",
     "\n",
-    "    # Relations Extractors (RE)\n",
-    "    PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
-    "    re_models = {}\n",
-    "\n",
-    "    # Full Pipeline\n",
-    "    text_mining_pipeline = TextMiningPipeline(ee_model, re_models)\n",
-    "\n",
-    "    def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
-    "        table_extractions = text_mining_pipeline(text, article_id, return_prob=return_prob, debug=debug)\n",
-    "        return table_extractions\n",
-    "        \n",
-    "    return textmining_pipeline\n",
-    "\n",
-    "mining_server_url = 'http://dgx1.bbp.epfl.ch:8852'\n",
-    "text_mining = get_mining_pipeline(mining_server_url)"
+    "    return table_extractions"
    ]
   },
   {
@@ -302,7 +281,7 @@
     "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
     "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
     "            table_extractions = table_extractions.append(\n",
-    "                text_mining(text, article_id=text_identifier, return_prob=False), \n",
+    "                textmining_pipeline(text, article_id=text_identifier, return_prob=False), \n",
     "                ignore_index=True)\n",
     "        display(table_extractions)\n",
     "        \n",
@@ -331,7 +310,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = text_mining(text, return_prob=False)\n",
+    "        table_extractions = textmining_pipeline(text, return_prob=False)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
