[BBS-88]: Create server for text mining pipeline (#52)
Co-authored-by: Stanislav Schmidt <stanislav.schmidt@epfl.ch>
Co-authored-by: Francesco Casalegno <francesco.casalegno@gmail.com>

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "from collections import OrderedDict\n",
     "import logging\n",
+    "import io\n",
     "import os\n",
     "from pathlib import Path\n",
     "import sqlite3\n",
@@ -30,7 +31,6 @@
     "import nltk\n",
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
-    "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
     "from bbsearch.widget import Widget"
    ]
@@ -82,7 +82,9 @@
    "outputs": [],
    "source": [
     "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
-    "BBS_DATA_PATH = Path(os.getenv(\"BBS_DATA_PATH\")) if \"BBS_DATA_PATH\" in os.environ else Path('/raid/bbs_data/')\n",
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") or '/raid/bbs_data/'\n",
+    "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
+    "\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
     "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
@@ -99,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.post(\"{}/hello\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json(), \"The server is not accessible\"\n",
+    "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
+    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
     "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
@@ -206,15 +208,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Entities Extractors (EE)\n",
-    "ee_model = spacy.load(\"en_ner_craft_md\")\n",
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
+    "assert TEXT_MINING_URL is not None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
     "\n",
-    "# Relations Extractors (RE)\n",
-    "PATH_CHEMPROT_TRAINED_MODEL = trained_models_path / 'scibert_chemprot.tar.gz'\n",
-    "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
+    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
     "\n",
-    "# Full Pipeline\n",
-    "text_mining_pipeline = TextMiningPipeline(ee_model, re_models)"
+    "def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
+    "    request_json = {\n",
+    "        \"text\": text,\n",
+    "        \"article_id\": article_id,\n",
+    "        \"return_prob\": return_prob,\n",
+    "        \"debug\": debug,\n",
+    "    }\n",
+    "    response = requests.post(TEXT_MINING_URL, json=request_json)\n",
+    "    if response.headers[\"Content-Type\"] == \"text/csv\":\n",
+    "        with io.StringIO(response.text) as f:\n",
+    "            table_extractions = pd.read_csv(f)\n",
+    "    else:\n",
+    "        print(\"Response content type is not text/csv.\")\n",
+    "\n",
+    "    return table_extractions"
    ]
   },
   {
@@ -259,7 +281,7 @@
     "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
     "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
     "            table_extractions = table_extractions.append(\n",
-    "                text_mining_pipeline(text, article_id=text_identifier, return_prob=True), \n",
+    "                textmining_pipeline(text, article_id=text_identifier, return_prob=False), \n",
     "                ignore_index=True)\n",
     "        display(table_extractions)\n",
     "        \n",
@@ -288,7 +310,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = text_mining_pipeline(text, return_prob=True)\n",
+    "        table_extractions = textmining_pipeline(text, return_prob=False)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
