--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -337,19 +337,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "if globals().get('table_extractions') is None:\n",
-    "    ! wget -O extractions_example.csv 'https://drive.google.com/uc?export=download&id=11BBtkKsamru4kjUNev8lO_ulNMf7m3Ta'\n",
-    "    table_extractions = pd.read_csv('extractions_example.csv', sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print(f'The table has {table_extractions.shape[0]} rows.')"
    ]
   },
@@ -598,33 +585,8 @@
    "source": [
     "import pickle\n",
     "\n",
-    "# Note: The file is around 26 MB.\n",
-    "! wget -O entity_linking-terms.pkl 'https://drive.google.com/uc?export=download&id=1DyA9WL1YpEBO37KkDSCY3f1LWFfscO7F'\n",
-    "\n",
-    "with open('entity_linking-terms.pkl', 'rb') as f:\n",
-    "    ontology = pickle.load(f)\n",
-    "\n",
-    "ontologies = ['ChEBI', 'SO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'The entity linking considers {len(ontology)} terms from:', *ontologies, sep='\\n - ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import spacy\n",
     "import faiss\n",
-    "import numpy as np\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "class Candidate:\n",
     "    \n",
@@ -640,11 +602,11 @@
     "\n",
     "class EntityLinker:\n",
     "    \n",
-    "    def __init__(self, ontology, nlp):\n",
+    "    def __init__(self, nlp):\n",
+    "        self.ontology = None\n",
     "        self.terms = None\n",
     "        self.model = None\n",
     "        self.index = None\n",
-    "        self.ontology = [(k, v[0], v[1]) for k, v in ontology.items()]\n",
     "        self.nlp = nlp\n",
     "    \n",
     "    def link(self, mentions):\n",
@@ -674,7 +636,10 @@
     "        return [[Candidate(*self.terms[i], d) for i, d in zip(indexes[k], distances[k])]\n",
     "                for k in range(len(mentions))]\n",
     "    \n",
-    "    def train(self):\n",
+    "    def train(self, ontology):\n",
+    "        import numpy as np\n",
+    "        from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "        self.ontology = [(k, v[0], v[1]) for k, v in ontology.items()]\n",
     "        self.model = TfidfVectorizer(analyzer='char', ngram_range=(3, 3), max_df=0.95,\n",
     "                                     max_features=int(len(self.ontology)*0.1),\n",
     "                                     dtype=np.float32, norm='l2')\n",
@@ -684,7 +649,24 @@
     "        filtered_embeddings = embeddings[flags]\n",
     "        self.terms = [term for term, flag in zip(self.ontology, flags) if flag]\n",
     "        self.index = faiss.IndexFlatL2(filtered_embeddings.shape[1])\n",
-    "        self.index.add(filtered_embeddings.toarray())"
+    "        self.index.add(filtered_embeddings.toarray())\n",
+    "    \n",
+    "    def save_pretrained(self, dirpath):\n",
+    "        with open(f'{dirpath}/model', 'wb') as f:\n",
+    "            pickle.dump(linker.ontology, f)\n",
+    "            pickle.dump(linker.terms, f)\n",
+    "            pickle.dump(linker.model, f)\n",
+    "        faiss.write_index(linker.index, f'{dirpath}/index')\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def from_pretrained(dirpath, nlp):\n",
+    "        linker = EntityLinker(nlp)\n",
+    "        with open(f'{dirpath}/model', 'rb') as f:\n",
+    "            linker.ontology = pickle.load(f)\n",
+    "            linker.terms = pickle.load(f)\n",
+    "            linker.model = pickle.load(f)\n",
+    "        linker.index = faiss.read_index(f'{dirpath}/index')\n",
+    "        return linker"
    ]
   },
   {
@@ -693,11 +675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    nlp = ee_model\n",
-    "except NameError:\n",
-    "    import spacy\n",
-    "    nlp = spacy.load('en_ner_craft_md')"
+    "nlp = spacy.load('en_ner_craft_md')"
    ]
   },
   {
@@ -706,10 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "linker = EntityLinker(ontology, nlp)\n",
-    "linker.train()\n",
-    "# Note: Takes around 45 secs on a BBP issued MacBook Pro."
+    "linker = EntityLinker.from_pretrained('entity-linking', nlp)"
    ]
   },
   {
@@ -741,9 +716,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "enriched_annotations = list(enrich_annotations(annotations, linker))\n",
-    "# Note: Takes around 20 secs on a BBP issued MacBook Pro."
+    "enriched_annotations = list(enrich_annotations(annotations, linker))"
    ]
   },
   {
@@ -1225,9 +1198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1239,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
