--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -32,7 +32,8 @@
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
-    "from bbsearch.widget import Widget"
+    "from bbsearch.widget import Widget\n",
+    "from bbsearch.utils import Timer"
    ]
   },
   {
@@ -222,14 +223,36 @@
     "\n",
     "assert response.ok and response.json()['name'] == 'MiningServer'\n",
     "\n",
-    "def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
-    "    request_json = {\n",
-    "        \"text\": text,\n",
-    "        \"article_id\": article_id,\n",
-    "        \"return_prob\": return_prob,\n",
-    "        \"debug\": debug,\n",
-    "    }\n",
-    "    response = requests.post(TEXT_MINING_URL, json=request_json)\n",
+    "def textmining_pipeline(information, debug=False):\n",
+    "    \"\"\"Handle text mining server requests depending on the type of information.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    information: str or list.\n",
+    "        Information can be either a raw string text, either a list of tuples \n",
+    "        (article_id, paragraph_id) related to the database.\n",
+    "    debug : bool\n",
+    "        If True, columns are not necessarily matching the specification. However, they\n",
+    "        contain debugging information. If False, then matching exactly the specification.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    table_extractions: pd.DataFrame\n",
+    "        The final table. If `debug=True` then it contains all the metadata. If False then it\n",
+    "        only contains columns in the official specification.\n",
+    "    \"\"\"\n",
+    "    if isinstance(information, list):\n",
+    "        request_json = {\n",
+    "            \"identifiers\": information}\n",
+    "        response = requests.post(TEXT_MINING_URL + '/database', json=request_json)\n",
+    "    elif isinstance(information, str):\n",
+    "        request_json = {\n",
+    "            \"text\": information,\n",
+    "            \"debug\": debug}\n",
+    "        response = requests.post(TEXT_MINING_URL + '/text', json=request_json)\n",
+    "    else:\n",
+    "        raise TypeError('Wrong type for the information!')\n",
+    "\n",
     "    if response.headers[\"Content-Type\"] == \"text/csv\":\n",
     "        with io.StringIO(response.text) as f:\n",
     "            table_extractions = pd.read_csv(f)\n",
@@ -275,15 +298,16 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    complete_text = ''\n",
     "    with bbs_widgets['out']:\n",
-    "        article_saver.retrieve_text()\n",
-    "        table_extractions = pd.DataFrame()\n",
-    "        for article_id, section_name, paragraph_id, text \\\n",
-    "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
-    "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
-    "            table_extractions = table_extractions.append(\n",
-    "                textmining_pipeline(text, article_id=text_identifier, return_prob=False), \n",
-    "                ignore_index=True)\n",
-    "        display(table_extractions)\n",
+    "        timer = Timer(verbose=True)\n",
+    "        with timer('text retrieve'):\n",
+    "            article_saver.retrieve_text()\n",
+    "        with timer('casting to list'):\n",
+    "            chosen_text = article_saver.df_chosen_texts\n",
+    "            identifiers = [(row['article_id'], row['paragraph_id']) for _, row in chosen_text.iterrows()]\n",
+    "            print(len(identifiers))\n",
+    "        with timer('server part'):\n",
+    "            table_extractions = textmining_pipeline(information=identifiers)\n",
+    "            display(table_extractions)\n",
     "        \n",
     "bbs_widgets['articles_button'].on_click(article_button)"
    ]
@@ -291,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# \"Input Text\" Widget\n",
@@ -310,7 +336,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = textmining_pipeline(text, return_prob=False)\n",
+    "        table_extractions = textmining_pipeline(text)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
@@ -858,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,9 +1251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1239,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
