--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -14,6 +14,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from collections import OrderedDict\n",
     "import logging\n",
     "import io\n",
@@ -32,7 +41,18 @@
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
-    "from bbsearch.widget import Widget"
+    "from bbsearch.widgets import SearchWidget, MiningWidget, MiningConfigurationWidget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 1\n",
+    "\n",
+    "%aimport bbsearch.widgets.mining_widget"
    ]
   },
   {
@@ -81,8 +101,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") or '/raid/bbs_data/'\n",
+    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\", \"http://dgx1.bbp.epfl.ch:8850\")\n",
+    "assert SEARCH_ENGINE_URL is not None\n",
+    "\n",
+    "test_response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
+    "assert test_response.ok and test_response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
+    "\n",
+    "searcher = RemoteSearcher(SEARCH_ENGINE_URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/bbs_data/\")\n",
     "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
     "\n",
     "CORD19_VERSION = 'v7'\n",
@@ -92,20 +126,6 @@
     "trained_models_path = BBS_DATA_PATH / 'trained_models'\n",
     "\n",
     "assert db_path.is_file()\n",
-    "assert SEARCH_ENGINE_URL is not None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
-    "\n",
-    "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "\n",
     "database = sqlite3.connect(str(db_path))"
    ]
   },
@@ -124,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(searcher, database, article_saver=article_saver)\n",
+    "bbs_widget = SearchWidget(searcher, database, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
@@ -158,7 +178,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mining_configuration_widget = MiningConfigurationWidget()\n",
+    "mining_configuration_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mining_configuration_widget.get_selected_entity_types()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mining_configuration_widget.get_selected_relation_types()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,35 +249,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
-    "assert TEXT_MINING_URL is not None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\", \"http://dgx1.bbp.epfl.ch:8852\")\n",
+    "assert TEXT_MINING_URL is not None\n",
+    "\n",
     "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
-    "\n",
-    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
-    "\n",
-    "def textmining_pipeline(text, article_id=None, return_prob=False, debug=False):\n",
-    "    request_json = {\n",
-    "        \"text\": text,\n",
-    "        \"article_id\": article_id,\n",
-    "        \"return_prob\": return_prob,\n",
-    "        \"debug\": debug,\n",
-    "    }\n",
-    "    response = requests.post(TEXT_MINING_URL, json=request_json)\n",
-    "    if response.headers[\"Content-Type\"] == \"text/csv\":\n",
-    "        with io.StringIO(response.text) as f:\n",
-    "            table_extractions = pd.read_csv(f)\n",
-    "    else:\n",
-    "        print(\"Response content type is not text/csv.\")\n",
-    "\n",
-    "    return table_extractions"
+    "assert response.ok\n",
+    "assert response.json()['name'] == 'MiningServer'"
    ]
   },
   {
@@ -245,82 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is the output: csv table of extracted entities/relations.\n",
-    "table_extractions = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define Widgets\n",
-    "bbs_widgets = OrderedDict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bbs_widgets['articles_button'] = ipywidgets.Button(\n",
-    "    description='Mine Selected Articles!',\n",
-    "    layout=ipywidgets.Layout(width='60%')\n",
-    ")\n",
-    "\n",
-    "def article_button(b):\n",
-    "    global table_extractions\n",
-    "    bbs_widgets['out'].clear_output()\n",
-    "    complete_text = ''\n",
-    "    with bbs_widgets['out']:\n",
-    "        article_saver.retrieve_text()\n",
-    "        table_extractions = pd.DataFrame()\n",
-    "        for article_id, section_name, paragraph_id, text \\\n",
-    "                  in article_saver.df_chosen_texts[['article_id', 'section_name', 'paragraph_id', 'text']].values:\n",
-    "            text_identifier = f'{article_id}:\"{section_name}\":{paragraph_id}'\n",
-    "            table_extractions = table_extractions.append(\n",
-    "                textmining_pipeline(text, article_id=text_identifier, return_prob=False), \n",
-    "                ignore_index=True)\n",
-    "        display(table_extractions)\n",
-    "        \n",
-    "bbs_widgets['articles_button'].on_click(article_button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \"Input Text\" Widget\n",
-    "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
-    "        value=DEFAULT_TEXT,\n",
-    "        layout=ipywidgets.Layout(width='75%', height='300px')\n",
-    "    )\n",
-    "\n",
-    "# \"Submit!\" Button\n",
-    "bbs_widgets['submit_button'] = ipywidgets.Button(\n",
-    "    description='Mine This Text!',\n",
-    "    layout=ipywidgets.Layout(width='30%')\n",
-    ")\n",
-    "def cb(b):\n",
-    "    global table_extractions\n",
-    "    bbs_widgets['out'].clear_output()\n",
-    "    with bbs_widgets['out']:\n",
-    "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = textmining_pipeline(text, return_prob=False)\n",
-    "        display(table_extractions)\n",
-    "bbs_widgets['submit_button'].on_click(cb)\n",
-    "\n",
-    "# \"Output Area\" Widget\n",
-    "bbs_widgets['out'] = ipywidgets.Output(layout={'border': '0.5px solid black'})\n",
-    "\n",
-    "# Finalize Widgets\n",
-    "ordered_widgets = list(bbs_widgets.values())\n",
-    "main_widget = ipywidgets.VBox(ordered_widgets)\n",
-    "IPython.display.display(main_widget)"
+    "MiningWidget(TEXT_MINING_URL, article_saver, DEFAULT_TEXT)"
    ]
   },
   {
@@ -858,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,9 +1168,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:kgforge_is_awesome]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kgforge_is_awesome"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
