Change with Stan's suggestion

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -253,11 +253,14 @@
     "    else:\n",
     "        raise TypeError('Wrong type for the information!')\n",
     "\n",
+    "    table_extractions = None\n",
     "    if response.headers[\"Content-Type\"] == \"text/csv\":\n",
     "        with io.StringIO(response.text) as f:\n",
     "            table_extractions = pd.read_csv(f)\n",
     "    else:\n",
     "        print(\"Response content type is not text/csv.\")\n",
+    "        print(response.headers)\n",
+    "        print(response.text)\n",
     "\n",
     "    return table_extractions"
    ]
