Let tune EntityLinker model to target specific performances

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -583,9 +583,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Entity Linking ###\n",
+    "\n",
     "import pickle\n",
     "\n",
-    "import spacy\n",
+    "# import spacy  # FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
     "import faiss\n",
     "\n",
     "class Candidate:\n",
@@ -610,13 +612,15 @@
     "        self.nlp = nlp\n",
     "    \n",
     "    def link(self, mentions):\n",
-    "        selections = self.candidates(mentions)\n",
+    "        print('WARN   Entity Linking   '\n",
+    "              'Performances are low because the component is not part of the NLP pipeline.')\n",
+    "        selections = self.candidates(mentions)        \n",
     "        return [self.disambiguate(mention, candidates)\n",
     "                for mention, candidates in zip(mentions, selections)]\n",
     "    \n",
     "    def disambiguate(self, mention, candidates, threshold=0.6):\n",
     "        def _(cands):\n",
-    "            # FIXME Used as a proxy until this is done during the other NLP operations.\n",
+    "            # FIXME Proxy to try to get context as if the component was part of the NLP pipeline.\n",
     "            doc = self.nlp(mention)\n",
     "            similarities = [(doc.similarity(self.nlp(x.definition.replace(mention, ''))), x)\n",
     "                            for x in cands if x.definition]\n",
@@ -624,11 +628,15 @@
     "            return ranked[0]\n",
     "        zeros = [x for x in candidates if x.score == 0]\n",
     "        if zeros:\n",
-    "            chosen = _(zeros)\n",
-    "            return chosen\n",
+    "            # FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
+    "            # chosen = _(zeros)\n",
+    "            # return chosen\n",
+    "            return zeros[0]\n",
     "        else:\n",
-    "            chosen = _(candidates)\n",
-    "            return chosen if chosen[0] >= threshold else None\n",
+    "            # FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
+    "            # chosen = _(candidates)\n",
+    "            # return chosen if chosen[0] >= threshold else None\n",
+    "            return sorted(candidates, key=lambda x: x.score)[0]\n",
     "    \n",
     "    def candidates(self, mentions, limit=3):\n",
     "        embeddings = self.model.transform(mentions)\n",
@@ -636,13 +644,11 @@
     "        return [[Candidate(*self.terms[i], d) for i, d in zip(indexes[k], distances[k])]\n",
     "                for k in range(len(mentions))]\n",
     "    \n",
-    "    def train(self, ontology):\n",
+    "    def train(self, ontology, **kwargs):\n",
     "        import numpy as np\n",
     "        from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "        self.ontology = [(k, v[0], v[1]) for k, v in ontology.items()]\n",
-    "        self.model = TfidfVectorizer(analyzer='char', ngram_range=(3, 3), max_df=0.95,\n",
-    "                                     max_features=int(len(self.ontology)*0.1),\n",
-    "                                     dtype=np.float32, norm='l2')\n",
+    "        self.model = TfidfVectorizer(dtype=np.float32, **kwargs)\n",
     "        terms = [x for _, x, _ in self.ontology]\n",
     "        embeddings = self.model.fit_transform(terms)\n",
     "        flags = np.array(embeddings.sum(axis=1) != 0).reshape(-1)\n",
@@ -675,7 +681,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = spacy.load('en_ner_craft_md')"
+    "# FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
+    "# spacy_model = spacy.load('en_ner_craft_md')"
    ]
   },
   {
@@ -684,7 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linker = EntityLinker.from_pretrained('entity-linking', nlp)"
+    "linker = EntityLinker.from_pretrained('shared-data/entity-linking', None)"
    ]
   },
   {
@@ -705,7 +712,7 @@
     "                'label': can[1].term,\n",
     "            }\n",
     "        return new\n",
-    "    mentions = [x['target']['selector']['value'] for x in annotations]\n",
+    "    mentions = [x['target']['selector']['exact'] for x in annotations]\n",
     "    linked_mentions = linker.link(mentions)\n",
     "    return (_(ann, can) for ann, can in zip(annotations, linked_mentions))"
    ]
